Добавлена возможность выставления категории дела под номером 4 - труп.

--- a/src/main/resources/templates/table_rd/add_journal.html
+++ b/src/main/resources/templates/table_rd/add_journal.html
@@ -32,6 +32,7 @@
         Тип РД <select typeof="text" name="typeJ">
         <option>2 - розыск</option>
         <option>1 - сигнальная система</option>
+        <option>4 - труп</option>
         <option>5 - из ОПД в РД</option>
     </select><br><br>
         <select name="area">
