--- a/src/main/resources/templates/table_rd/download_docs.html
+++ b/src/main/resources/templates/table_rd/download_docs.html
@@ -13,9 +13,7 @@
 
     <br>
 
-Вашей учётной записи не предосавлен доступ к этому разделу
-
-<a href="/tableRD/download/1">,j</a>
+<a href="/tableRD/download/1" class="embed-responsive">Скачать документ</a>
 
 </body>
 
