--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -4,6 +4,8 @@
 
 <head>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/bootstrap.bundle.min.js">
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <title>Авторизация</title>
     <meta rel="author" content="Vasilev Nikita 314"/>
 </head>
