--- a/src/main/resources/templates/table_rd/info_journal.html
+++ b/src/main/resources/templates/table_rd/info_journal.html
@@ -3,12 +3,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/bootstrap.bundle.min.js">
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <title>Информация по РД</title>
     <meta rel="author" content="Vasilev Nikita 314"/>
 </head>
 
 <body>
-
+<br>
+<br>
+<br>
 <div th:insert="blocks/navigation"></div>
 
 <br>
