--- a/src/main/resources/templates/table_rd/download_docs.html
+++ b/src/main/resources/templates/table_rd/download_docs.html
@@ -4,11 +4,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/bootstrap.bundle.min.js">
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <title>Download file</title>
 </head>
 
 <body>
-
+<br>
+<br>
+<br>
     <header th:insert="blocks/navigation"></header>
 
     <br>
